--- a/school/index.html
+++ b/school/index.html
@@ -3,13 +3,9 @@
 <head>
 <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <meta charset="utf-8" />
-<meta http-equiv="imagetoolbar" content="no" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SFCC Design Grad Show</title>
-<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
-<link rel="stylesheet" type="text/css" href="MyFontsWebfontsKit.css">
+<title>SFCC Graphic Design Portfolio Show</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 <!-- Latest compiled and minified CSS -->
@@ -20,62 +16,65 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50203800-2', 'sfccdesign.com');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 <body>
 	<div class="container">
-		<div class="fb_logo">
-			<p class="float">Check us out on Facebook</p>
-			<img src="img/fb_logo.png" alt="facebook logo">
-		</div>
-		
-	</div>
-<p><img class="main_content" src="img/meat1.jpg" alt="SFCC Grad Show 2014 Steak Image"></p>
-	<div class="container">
-		<div class="col-md-12">
-			<img class="logo" src="img/logo.png" alt="SFCC Grad Show 2014">
-		</div>
-	</div>
-	<div class="container">
-<!--
-		<div class="col-md-12 centered">
-			<p><img class="main_content" src="img/meat1.jpg" alt="SFCC Grad Show 2014 Steak Image"></p>
-		</div>
--->
-		<div class="col-md-12 content">
-			<h4 class="border2 bg1">See who's got the chops.</h4>
-			<h2 class="border border2 AvenirNextLTPro-UltLt bg">Spokane Falls Community College</h2>
-			<h1 class="border center bg">Graphic Design Portfolio Show</h1>
-			<h3 class="border1 float food AvenirNextLTPro-UltLt bg">Free Food</h3>
-			<h3 class="border1 float drink AvenirNextLTPro-UltLt bg">Drink</h3>
-			<h3 class="border1 float design AvenirNextLTPro-UltLt bg">Design Review</h3>
-			<h1 class="float hamilton bg">Hamilton Studio</h1>
-			<h3 class="date float pt10 AvenirNextLTPro-UltLt bg">June 6 &nbsp;&#64;&nbsp; 5pm</h3>
-		</div>
-<!--
-		<div class="col-md-8">
-			
-<div class="newsletter">
-				<form id="newsletterForm" action="newsletter.php" method="post">
-                <label class="float AvenirNextLTPro-UltLt">Sign up for Newsletter: &nbsp;</label>
-                <input class="float" type="text" name="email">
-                <input class="float AvenirNextLTPro-UltLt" type="submit" name="submit" value="Submit">
-            </form>
+		<div class="col-sm-12">
+			<div class="fb_logo">
+				<a href="https://www.facebook.com/events/1445559079017268/" target="_blank"><img src="img/facebook_icon.png" alt="facebook logo"></a>
 			</div>
-
-		</div>
--->
-		<div class="col-md-8">
-			<div class="headline">
-				<h5 class="AvenirNextLTPro-UltLt">CHECK BACK TO SEE STUDENT WORK.</h5>
+			<div class="yt_logo">
+				<a href="https://www.facebook.com/events/1445559079017268/" target="_blank"><img src="img/youtube_icon.png" alt="facebook logo"></a>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<img class="logo" src="img/logo.png" alt="SFCC Grad Show 2014">
+		<div class="col-sm-12 presentation">
+		</div>
+		<div class="col-sm-12 content">
+			<div class="table-wrap">
+			<table>
+				<tr>
+					<td colspan="6"><h1>SFCC Graphic Design Portfolio Show</h1></td>
+				</tr>
+				<tr>
+					<td colspan="6">
+						<h3>1427 W Dean Ave, Spokane, WA &bull; 
+							<a target="_blank" href="https://www.google.com/maps/place/Hamilton+Studio/@47.66609,-117.433832,17z/data=!3m1!4b1!4m2!3m1!1s0x0:0x18caf8efc4c732f9">Map</a>
+						</h3>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2"><h3>Free Food</h3></td>
+					<td colspan="2"><h3>Drink</h3></td>
+					<td colspan="2"><h3>Design Review</h3></td>
+				</tr>
+				<tr>
+					<td colspan="3"><a href="http://www.hamiltonstudio.com/" class="inherit-link" target="_blank"><h2>Hamilton Studio</h2></a></td>
+					<td colspan="3"><h2>June 6 &#64; 5pm</h2></td>
+				</tr>
+			</table>
+			</div>
 			<div class="mslogo">
-			<p class="AvenirNextLTPro-UltLt"><span>Sponsored By: &nbsp;</span><img src="img/masa-logo.png" alt="Magner Sanborn Logo"></p>
+				<p class="AvenirNextLTPro-UltLt"><span>Sponsored By: </span><a href="http://www.magnersanborn.com/" target="_blank"><img src="img/masa-logo.png" alt="Magner Sanborn Logo"></a></p>
 			</div>
-		</div>
-		
+		</div>		
 	</div><!-- End of Container -->
+	<div id="gallery"></div>
+<script src='http://codepen.io/assets/libs/fullpage/jquery_and_jqueryui.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.7/TweenMax.min.js'></script>
+ <script src="js/index.js"></script>
 </body>
 </html>
