Got ScrollTo working as long as we fix the height of images in the dropdown. Hope to fix so we can have whatever image sizes we want.

--- a/school/index.html
+++ b/school/index.html
@@ -73,7 +73,7 @@
 		</div>		
 	</div><!-- End of Container -->
 	<div id="gallery"></div>
-<script src='http://codepen.io/assets/libs/fullpage/jquery_and_jqueryui.js'></script>
+<!-- <script src='http://codepen.io/assets/libs/fullpage/jquery_and_jqueryui.js'></script> -->
 <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.7/TweenMax.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/144812/ScrollToPlugin.min.js'></script> -->
  <script src="js/index.js"></script>
