--- a/school/index.html
+++ b/school/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<meta charset="utf-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>SFCC Graphic Design Portfolio Show</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -73,9 +73,8 @@
 		</div>		
 	</div><!-- End of Container -->
 	<div id="gallery"></div>
-<!-- <script src='http://codepen.io/assets/libs/fullpage/jquery_and_jqueryui.js'></script> -->
-<!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.7/TweenMax.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/144812/ScrollToPlugin.min.js'></script> -->
+<script src='http://codepen.io/assets/libs/fullpage/jquery_and_jqueryui.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.7/TweenMax.min.js'></script>
  <script src="js/index.js"></script>
 </body>
 </html>
