Added Sidr plugin and a simple sidebar. Added the students loop back and remote click functionality back. Added Students loop to the Sidr Plugin. Working on Remote Click function. The filter when clicked on a single digit id will find anything with that number in it. So click on 1 and it returns 1, 11, 21. Researching fix probably regular expression for the filter.
If you click on a higher number id in the remote the animations work... I think we really just need to fix that filter, maybe timings on both remote and other click function.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-
+<link rel="stylesheet" type="text/css" href="css/jquery.sidr.light.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 <script>
@@ -69,9 +69,26 @@
 			</div>
 		</div>		
 	</div><!-- End of Container -->
+	
+<a id="simple-menu" href="#sidr">Toggle menu</a>
+
 	<div id="gallery"></div>
+
+
+
+ 
+<div id="sidr">
+  <!-- Your content -->
+  <ul id="students">
+    
+  </ul>
+</div>
+ 
+
+
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
- <script src="js/index.js"></script>
+<script src="js/jquery.sidr.min.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
