Styled student directory... and stuff.

--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
 
 </head>
 <body>
+	<div id="sidr-right">
+	  <!-- Your content -->
+	  <ul id="students"></ul>
+	</div>
 	<div class="container">
-		<div class="col-sm-12">
-			<div class="fb_logo">
-				<a href="https://www.facebook.com/events/1445559079017268/" target="_blank"><img src="img/facebook_icon.png" alt="facebook logo"></a>
-			</div>
-			<div class="yt_logo">
-				<a href="https://www.facebook.com/events/1445559079017268/" target="_blank"><img src="img/youtube_icon.png" alt="facebook logo"></a>
-			</div>
-		</div>
+		<a id="right-menu" class="menu-btn" href="#right-menu"><img src="img/mobile-icon.png"></a>
 		<img class="logo" src="img/logo.png" alt="SFCC Grad Show 2014">
 		<div class="col-sm-12 presentation">
 		</div>
@@ -67,24 +64,16 @@
 			<div class="mslogo">
 				<p class="AvenirNextLTPro-UltLt"><span>Sponsored By: </span><a href="http://www.magnersanborn.com/" target="_blank"><img src="img/masa-logo.png" alt="Magner Sanborn Logo"></a></p>
 			</div>
+			<div class="fb_logo">
+				<a href="https://www.facebook.com/events/1445559079017268/" target="_blank"><img src="img/facebook_icon.png" alt="facebook logo"></a>
+			</div>
+			<div class="yt_logo">
+				<a href="https://www.facebook.com/events/1445559079017268/" target="_blank"><img src="img/youtube_icon.png" alt="facebook logo"></a>
+			</div>
 		</div>		
 	</div><!-- End of Container -->
 	
-<a id="simple-menu" href="#sidr">Toggle menu</a>
-
-	<div id="gallery"></div>
-
-
-
- 
-<div id="sidr">
-  <!-- Your content -->
-  <ul id="students">
-    
-  </ul>
-</div>
- 
-
+<div id="gallery"></div>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
