--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.sidr.min.js"></script>
-<script src="js/index.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
